--- a/templates/index.html
+++ b/templates/index.html
@@ -304,7 +304,7 @@
                                         <th style="width: 80px;">序号</th>
                                         <th style="width: 100px;">状态</th>
                                         <th style="width: 120px;">大小</th>
-                                        <th style="width: 100px;">耗时</th>
+                                        <th style="width: 100px;">耗时ms</th>
                                     </tr>
                                 </thead>
                                 <tbody id="taskDetailSegments">
